# cpp_viewer

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile  edge.h  facade.h  figure.h  file_reader.h  imgui_glfw_window.cc  imgui_glwf_window.h  main.cc  point.h  s21_matrix_oop.h  savefile.json  scene.h  scene_object.h  settings.h  transform_matrix.h  transform_matrix_builder.h  vertex.h
src/controller/: Command.h  Controller.cc  Controller.h  ctr.cc  ctr.h
src/imgui/: imgui-knobs.cpp
src/model/: Aphine.cc  Aphine.h  CMakeLists.txt  Drawer.cc  Drawer.h  Makefile  Model.cc  Model.h  Reader.cc  Reader.h  Vertex3D.h  file_reader.cc  file_reader.h  model.cc  model.h  model_drawer.cc  model_drawer.h  transform_matrix.h  transform_matrix_builder.h  vertex.h
src/model/tests/: load_test.cc
src/shaders/: fragm.glsl  glshader.h  versh.glsl
src/tests/: tests.cc
src/view/: CMakeLists.txt  Facade.cc  Facade.h  Makefile  Settings.cc  Settings.h  facade.cc  facade.h  main.cc  settings.cc  settings.h
